# Suraimu

./: .gitignore  README.md  com.github.RozeFound.Suraimu.pypi-deps.yaml  com.github.RozeFound.Suraimu.yml  meson.build  requirements.in  requirements.txt
data/: com.github.RozeFound.Suraimu.appdata.xml.in  com.github.RozeFound.Suraimu.desktop.in.in  com.github.RozeFound.Suraimu.gschema.xml  meson.build
data/po/: POTFILES  meson.build
suraimu/: config.py  main.py  meson.build  suraimu.py
suraimu/backend/: meson.build  steam.py  utils.py
suraimu/ui/: about.blp  info-window.blp  library-entry.blp  library.blp  meson.build  placeholder.blp  preferences-window.blp  style-hc.css  style.css  suraimu.gresource.xml  theme-switcher.blp  window.blp
suraimu/views/: library.py  meson.build  not_implemented.py
suraimu/widgets/: animation.py  library.py  meson.build  theme_switcher.py
suraimu/windows/: application.py  information.py  main_window.py  meson.build  preferences.py  properties.py
